# calculator

./: .gitignore  CMakeLists.txt  README.md
calclib/: CMakeLists.txt
calclib/include/: calclib.h
calclib/src/: CMakeLists.txt  calclib.c
console_calculator/: CMakeLists.txt
console_calculator/src/: CMakeLists.txt  main.cpp
qml_calculator/: CMakeLists.txt  main.qml
qml_calculator/include/: calclibwrapper.h  resultsaver.h
qml_calculator/src/: CMakeLists.txt  calclibwrapper.cpp  main.cpp  resultsaver.cpp
